ledger/sparse-struct/tests/ui/wrong-attribute.stderr
error: The `struct_name` attribute must be in the form `#[struct_name = "Name"]`.
 --> tests/ui/wrong-attribute.rs:4:1
  |
4 | #[struct_name(Hello)]
  | ^

error: `struct_name` should be specified on the enum, not on its variants.
  --> tests/ui/wrong-attribute.rs:12:5
   |
12 |     #[struct_name = "Hello"]
   |     ^
